# cookiecutter-pygobject

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: main.py
